--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -27,6 +27,24 @@
                     android:layout_height="wrap_content">
 
                     <EditText
+                        android:id="@+id/senderName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/senderName"
+                        android:imeActionId="6"
+                        android:imeActionLabel="Sender Name"
+                        android:imeOptions="actionUnspecified"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
                         android:id="@+id/sendEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
